# random-idea

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  configure.ac  dialect.cpp  guile_mlir.cpp  guile_mlir_test.cpp  guix.scm  pkgconf.c  pkgconf.scm
include/: guile_mlir.hpp
tests/: test1.scm
